--- a/style.css
+++ b/style.css
@@ -1,16 +1,28 @@
 h1 {
+  font-size: 35px;
   color: #6b76ff;
-  font-family: 'Arimo', sans-serif;
 }
 
+h2 {
+  font-size: 25px;
+  color: #ff7657;
+}
+h1, h2 {
+  margin-bottom: 20px;
+}
+h1, h2, h3 {
+  font-family: 'Arimo', sans-serif;
+
+}
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
-  background: rgba(0,0,0,0.1);
+  background: #eeeeee;
+  color: #222831;
 }
 
 a:hover {
-  color: #6b76ff;
+  color: #ff7657;
 }
 
 a {
@@ -19,7 +31,7 @@ a {
 }
 
 
-.profile-pic {
+.img-circle {
   width: 200px;
   height:  200px;
   border-radius: 50%;
@@ -30,7 +42,13 @@ a {
 
 }
 
-.list-inline {
+
+i {
+  font-size: 50px;
+
+}
+
+ul {
   list-style: none;
   padding: 0;
 }
@@ -39,17 +57,37 @@ a {
   display: inline;
   margin: 0 40px;
 }
-div {
+.card {
+  background: #fbeed7;
   text-align: center;
   width: 800px;
   padding: 30px 50px;
   margin: 20px auto;
-  background: white;
   border-radius: 4px;
   box-shadow: 2px 2px 3px grey;
 
+
+}
+#sidebar {
+  position: fixed;
+  width: 50px;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  line-height: 100px;
+  padding: 50px 50px;
+  background: #393e46;
+  color: #222831;
+}
+#page-content {
+  margin-left: 150px;
 }
 
+
+.hobbies > li {
+  font-size: 20px;
+  line-height: 40px;
+}
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
   div {
@@ -62,6 +100,7 @@ div {
 
   }
 }
+
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
   div {
